add everything in

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -19,62 +19,94 @@
     <div id="siteContainer">
       <nav class="mainNav">
         <h2 class="hidden">Main Navigation section for Gas-X</h2>
-        <div class="logo">
-          <h3 class="hidden">Logo</h3>
-          <img src="images/mountain.svg" alt="snow mountain icon">
-        </div> 
-        <!-- end logo -->
-        <nav class="Nav">
+        <div class="Nav">
           <h3 class="hidden">Navigation</h3>
-          <a href="index.html">HOME</a>
-          <a href="aboutUs.html">ABOUT US</a>
-          <a href="flavor.html">FLAVOR</a>
-          <a href="contact.html">CONTACT</a>
-        </nav>
+          <div class="logo">
+            <img src="images/mountain.svg" alt="snow mountain icon">
+          </div>
+          <a href="#" class="toggleButton">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <div class="navList">
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="aboutUs.html">ABOUT</a></li>
+              <li><a href="flavor.html">FLAVOR</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+        </div>
         <!-- end Nav -->
       </nav>
       <!-- end main Nav -->
 
 
       <section>
-        <header id="Header">
-          <h2 class="hidden">About us heading</h2>
-            <img src="images/heroImg_home.jpg" alt="Snow Mountain">
-              <p>
-                Thank you for choosing us.
-              </p>
-        </header>
+        <div class="hero">
+          <h2 class="hidden">About us section</h2>
+          <div class="heroText">
+            <h3 class="hidden">About us title</h3>
+            <h4>
+              Thank you for choosing us.
+            </h4>
+          </div>
+          <img class="heroImages" src="images/heroImg_home.jpg" alt="snow mountain with the sun">
+        </div>
       </section>
       <!-- end the main header -->
-
+      <section class="coop">
+        <h3 class="hidden">cooperation with Coors</h3>
+        <h4>We cooperate with</h4>
+          <img src="images/Coors_logo.svg" alt="coors logo">
+          <a href="https://www.coors.com/Ingredients" class="button">Learn More</a>
+      </section>
+      <!-- end the coop -->
       <section id="aboutBox">
         <h2 class="hidden">About us section</h2>
-        <div>
+        <div class="aboutImg">
           <h3 class="hidden">about us image</h3>
           <img src="images/forest.png" alt="bottle in the forest">
-          <h3 class="hidden">about us content</h3>
-          <p>Gas-X contains dimethicone, which breaks down air bubbles in the digestive tract. This can quickly relieve symptoms of gas and bloating. It breaks up air bubbles in the stomach by allowing them to clump together more easily for easier passage and quicker relief. Simethicone provides quick relief from many symptoms of gas and bloating, such as fullness, stress, and of course, gas. Gas-X helps break down air bubbles in your digestive tract, so your body can process gas naturally, rather than other products that need to be actively taken before gas occurs. We have always believed that providing the best service to our customers is our mission.</p>
+          <div class="aboutText">
+            <h3 class="hidden">about us content</h3>
+            <p>
+              Gas-X contains dimethicone, which breaks down air bubbles in the digestive tract. This can quickly relieve symptoms of gas and bloating. It breaks up air bubbles in the stomach by allowing them to clump together more easily for easier passage and quicker relief. Simethicone provides quick relief from many symptoms of gas and bloating, such as fullness, stress, and of course, gas. Gas-X helps break down air bubbles in your digestive tract, so your body can process gas naturally, rather than other products that need to be actively taken before gas occurs. We have always believed that providing the best service to our customers is our mission.
+              <br>
+              Take Gas-X when you feel uncomfortable due to common gas and bloating complaints. Gas-X products are available in both softgels and chewables.
+              <br>
+              Everyone’s biochemistry is a little different, so speed of gas relief may vary by person. But, in general, Gas-X relieves pressure, bloating, fullness and discomfort caused by excess stomach and intestinal gas in minutes. If you have prolonged discomfort, it’s best to consult with your doctor, just in case.
+            </p>
+          </div>
         </div>
       </section>
       <!-- end the about section -->
       <footer>
         <nav class="mainNav">
           <h2 class="hidden">Main Navigation section for Gas-X</h2>
-          <div class="logo">
-            <h3 class="hidden">Logo</h3>
-            <img src="images/mountain.svg" alt="snow mountain icon">
-          </div>
-          <!-- end logo -->
-          <nav class="Nav">
+          <div class="Nav">
             <h3 class="hidden">Navigation</h3>
-            <a href="index.html">HOME</a>
-            <a href="aboutUs.html">ABOUT US</a>
-            <a href="flavor.html">FLAVOR</a>
-            <a href="contact.html">CONTACT</a>
-          </nav>
+            <div class="logo">
+              <img class="footerLogo" src="images/mountain.svg" alt="snow mountain icon">
+            </div>
+            <div class="navList">
+              <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutUs.html">ABOUT</a></li>
+                <li><a href="flavor.html">FLAVOR</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+              </ul>
+            </div>
+          </div>
           <!-- end Nav -->
         </nav>
-        <!-- end main Nav -->
+        <div class="social">
+          <a href="#"><img src="images/facebook.svg" alt="facebook icon"></a>
+          <a href="#"><img src="images/instagram.svg" alt="instagram icon"></a>
+          <a href="#"><img src="images/twitter.svg" alt="twitter icon"></a>
+          <a href="#"><img src="images/youtube.svg" alt="youtube icon"></a>
+        </div>
       </footer>
       <div>
         <p class="Copyright">Copyright © by Zhihan Chen</p>
