--- a/flavor.html
+++ b/flavor.html
@@ -19,113 +19,153 @@
     <div id="siteContainer">
       <nav class="mainNav">
         <h2 class="hidden">Main Navigation section for Gas-X</h2>
-        <div class="logo">
-          <h3 class="hidden">Logo</h3>
-          <img src="images/mountain.svg" alt="snow mountain icon">
-        </div>
-        <!-- end logo -->
-        <nav class="Nav">
+        <div class="Nav">
           <h3 class="hidden">Navigation</h3>
-          <a href="index.html">HOME</a>
-          <a href="aboutUs.html">ABOUT US</a>
-          <a href="flavor.html">FLAVOR</a>
-          <a href="contact.html">CONTACT</a>
-        </nav>
+          <div class="logo">
+            <img src="images/mountain.svg" alt="snow mountain icon">
+          </div>
+          <a href="#" class="toggleButton">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <div class="navList">
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="aboutUs.html">ABOUT</a></li>
+              <li><a href="flavor.html">FLAVOR</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+        </div>
         <!-- end Nav -->
       </nav>
       <!-- end main Nav -->
 
 
       <section>
-        <header id="Header">
-          <h2 class="hidden">The flavor and price heading</h2>
-            <img src="images/heroImg_home.jpg" alt="Snow Mountain">
-              <p>
-                A variety of flavours
-                <br>
-                for you to choose from.
-              </p>
-        </header>
+        <div class="hero">
+          <h2 class="hidden">About us section</h2>
+          <div class="heroText">
+            <h3 class="hidden">About us title</h3>
+            <h4>
+              A variety of flavors for you to choose from
+            </h4>
+          </div>
+          <img class="heroImages" src="images/heroImg_home.jpg" alt="snow mountain with the sun">
+        </div>
       </section>
       <!-- end the main header -->
 
+      <div class="flavor4">
+        <section class="left2">
+          <h2 class="hidden">original flavor section</h2>
+            <div class="leftimg1" >
+              <img src="images/beer_card.png" alt="beer with white background">
+            </div>
+            <h3 class="hidden">flavor original image</h3>
+          <div class="leftContent1">
+            <h3 class="hidden">flavor original content</h3>
+            <h4 class="titleBig">Original Flavor</h4>
+            <p class="value">Simethicone 180 mg</p>
+            <p class="contentIn">
+              These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctorrecommended solution for fast gas relief among OTC brands.
+            </p>
+            <p class="price">$40.00</p>
+            <button class="buttonOrder" type="button" name="button">Order</button>
+          </div>
+        </section>
+        <!-- end the flavor 1 section -->
 
-      <section class="left">
-        <h2 class="hidden">peppermint flavor section</h2>
-          <img class="leftimg" src="images/beer_card.png" alt="beer with white background">
-          <h3 class="hidden">flavor 1 image</h3>
-        <div class="leftContent">
-          <h3 class="hidden">flavor 1 content</h3>
-          <p>
-            peppermint flavor - These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctor-recommended solution for fast gas relief among OTC brands.
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <span class="pirce">$45.00</span>
-          </p>
-        </div>
-      </section>
-      <!-- end the flavor 1 section -->
 
-      <section class="left">
-        <h2 class="hidden">cherry flavor section 2</h2>
-          <img class="leftimg" src="images/beer_card.png" alt="beer with white background">
-          <h3 class="hidden">flavor 2 image</h3>
-        <div class="leftContent">
-          <h3 class="hidden">flavor 2 content</h3>
-          <p>
-            cherry flavor - These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctor-recommended solution for fast gas relief among OTC brands.
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <span class="pirce">$45.00</span>
-          </p>
-        </div>
-      </section>
-      <!-- end the flavor 2 section -->
+        <section class="left2">
+          <h2 class="hidden">peppermint flavor section</h2>
+            <div class="leftimg1" >
+              <img src="images/beer_cardPeppermint.png" alt="beer with white background">
+            </div>
+            <h3 class="hidden">flavor peppermint image</h3>
+          <div class="leftContent1">
+            <h3 class="hidden">flavor peppermint content</h3>
+            <h4 class="titleBig">peppermint flavor</h4>
+            <p class="value">Simethicone 180 mg</p>
+            <p class="contentIn">
+              The cooling stimulus of peppermint blooms on your tongue for a cool summer feeling. <br> These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctorrecommended solution for fast gas relief among OTC brands.
+            </p>
+            <p class="price">$45.00</p>
+            <button class="buttonOrder" type="button" name="button">Order</button>
+          </div>
+        </section>
+        <!-- end the flavor 2 section -->
 
-      <section class="left">
-        <h2 class="hidden">grape flavor section 3</h2>
-          <img class="leftimg" src="images/beer_card.png" alt="beer with white background">
-          <h3 class="hidden">flavor 3 image</h3>
-        <div class="leftContent">
-          <h3 class="hidden">flavor 3 content</h3>
-          <p>
-            grape flavor - These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctor-recommended solution for fast gas relief among OTC brands.
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <span class="pirce">$45.00</span>
-          </p>
-        </div>
-      </section>
-      <!-- end the flavor 3 section -->
+
+        <section class="left2">
+          <h2 class="hidden">Orange flavor section</h2>
+            <div class="leftimg1" >
+              <img src="images/beer_cardOrange.png" alt="beer with white background">
+            </div>
+            <h3 class="hidden">flavor Orange image</h3>
+          <div class="leftContent1">
+            <h3 class="hidden">flavor Orange content</h3>
+            <h4 class="titleBig">Orange flavor</h4>
+            <p class="value">Simethicone 180 mg</p>
+            <p class="contentIn">
+              The taste is sweet and sour, with a tangerine aroma that gives you the taste of real fresh tangerines. <br> These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctorrecommended solution for fast gas relief among OTC brands.
+            </p>
+            <p class="price">$45.00</p>
+            <button class="buttonOrder" type="button" name="button">Order</button>
+          </div>
+        </section>
+        <!-- end the flavor 3 section -->
+
+
+        <section class="left2">
+          <h2 class="hidden">Grape flavor section</h2>
+            <div class="leftimg1" >
+              <img src="images/beer_cardGrape.png" alt="beer with white background">
+            </div>
+            <h3 class="hidden">flavor Grape image</h3>
+          <div class="leftContent1">
+            <h3 class="hidden">flavor Grape content</h3>
+            <h4 class="titleBig">Grape flavor</h4>
+            <p class="value">Simethicone 180 mg</p>
+            <p class="contentIn">
+              Sweet grapes bring a fragrant aroma, giving you a double enjoyment of taste and smell. <br> These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctorrecommended solution for fast gas relief among OTC brands.
+            </p>
+            <p class="price">$45.00</p>
+            <button class="buttonOrder" type="button" name="button">Order</button>
+          </div>
+        </section>
+        <!-- end the flavor 4 section -->
+      </div>
+
 
 
       <footer>
         <nav class="mainNav">
-          <h2 class="hidden">footer nav for Gas-X</h2>
-          <div class="logo">
-            <h3 class="hidden">Logo</h3>
-            <img src="images/mountain.svg" alt="snow mountain icon">
-          </div>
-          <!-- end logo -->
-          <nav class="Nav">
+          <h2 class="hidden">Main Navigation section for Gas-X</h2>
+          <div class="Nav">
             <h3 class="hidden">Navigation</h3>
-            <a href="index.html">HOME</a>
-            <a href="aboutUs.html">ABOUT US</a>
-            <a href="flavor.html">FLAVOR</a>
-            <a href="contact.html">CONTACT</a>
-          </nav>
+            <div class="logo">
+              <img class="footerLogo" src="images/mountain.svg" alt="snow mountain icon">
+            </div>
+            <div class="navList">
+              <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutUs.html">ABOUT</a></li>
+                <li><a href="flavor.html">FLAVOR</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+              </ul>
+            </div>
+          </div>
           <!-- end Nav -->
         </nav>
-        <!-- end main Nav -->
+        <div class="social">
+          <a href="#"><img src="images/facebook.svg" alt="facebook icon"></a>
+          <a href="#"><img src="images/instagram.svg" alt="instagram icon"></a>
+          <a href="#"><img src="images/twitter.svg" alt="twitter icon"></a>
+          <a href="#"><img src="images/youtube.svg" alt="youtube icon"></a>
+        </div>
       </footer>
       <div>
         <p class="Copyright">Copyright © by Zhihan Chen</p>
