--- a/contact.html
+++ b/contact.html
@@ -19,31 +19,42 @@
     <div id="siteContainer">
       <nav class="mainNav">
         <h2 class="hidden">Main Navigation section for Gas-X</h2>
-        <div class="logo">
-          <h3 class="hidden">Logo</h3>
-          <img src="images/mountain.svg" alt="snow mountain icon">
-        </div> 
-        <!-- end logo -->
-        <nav class="Nav">
+        <div class="Nav">
           <h3 class="hidden">Navigation</h3>
-          <a href="index.html">HOME</a>
-          <a href="aboutUs.html">ABOUT US</a>
-          <a href="flavor.html">FLAVOR</a>
-          <a href="contact.html">CONTACT</a>
-        </nav>
+          <div class="logo">
+            <img src="images/mountain.svg" alt="snow mountain icon">
+          </div>
+          <a href="#" class="toggleButton">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <div class="navList">
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="aboutUs.html">ABOUT</a></li>
+              <li><a href="flavor.html">FLAVOR</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+        </div>
         <!-- end Nav -->
       </nav>
       <!-- end main Nav -->
 
 
       <section>
-        <header id="Header">
-          <h2 class="hidden">Contact heading</h2>
-            <img src="images/heroImg_home.jpg" alt="Snow Mountain">
-              <p>
-                We are always happy to help.
-              </p>
-        </header>
+        <div class="hero">
+          <h2 class="hidden">About us section</h2>
+          <div class="heroText">
+            <h3 class="hidden">About us title</h3>
+            <h4>
+              Thank you for choosing us.
+            </h4>
+          </div>
+          <img class="heroImages" src="images/heroImg_home.jpg" alt="snow mountain with the sun">
+        </div>
       </section>
       <!-- end the main header -->
       <section id="contactForm">
@@ -89,27 +100,32 @@
         <!-- Fax secction end-->
       </section>
       <!-- end of the contact form-->
-
-
       <!-- -->
       <footer>
         <nav class="mainNav">
           <h2 class="hidden">Main Navigation section for Gas-X</h2>
-          <div class="logo">
-            <h3 class="hidden">Logo</h3>
-            <img src="images/mountain.svg" alt="snow mountain icon">
-          </div>
-          <!-- end logo -->
-          <nav class="Nav">
+          <div class="Nav">
             <h3 class="hidden">Navigation</h3>
-            <a href="index.html">HOME</a>
-            <a href="aboutUs.html">ABOUT US</a>
-            <a href="flavor.html">FLAVOR</a>
-            <a href="contact.html">CONTACT</a>
-          </nav>
+            <div class="logo">
+              <img class="footerLogo" src="images/mountain.svg" alt="snow mountain icon">
+            </div>
+            <div class="navList">
+              <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutUs.html">ABOUT</a></li>
+                <li><a href="flavor.html">FLAVOR</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+              </ul>
+            </div>
+          </div>
           <!-- end Nav -->
         </nav>
-        <!-- end main Nav -->
+        <div class="social">
+          <a href="#"><img src="images/facebook.svg" alt="facebook icon"></a>
+          <a href="#"><img src="images/instagram.svg" alt="instagram icon"></a>
+          <a href="#"><img src="images/twitter.svg" alt="twitter icon"></a>
+          <a href="#"><img src="images/youtube.svg" alt="youtube icon"></a>
+        </div>
       </footer>
       <div>
         <p class="Copyright">Copyright © by Zhihan Chen</p>
